--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@editorjs/editorjs": "^2.13.0"
+    "@editorjs/editorjs": "^2.13.0",
+    "@editorjs/paragraph": "^2.5.0"
   }
 }
