--- a/package.json
+++ b/package.json
@@ -3,6 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/checklist": "^1.1.0",
+    "@editorjs/code": "^2.4.1",
+    "@editorjs/delimiter": "^1.1.0",
+    "@editorjs/embed": "^2.2.0",
+    "@editorjs/header": "^2.2.3",
+    "@editorjs/inline-code": "^1.3.0",
+    "@editorjs/link": "^2.1.2",
+    "@editorjs/list": "^1.3.4",
+    "@editorjs/marker": "^1.2.0",
+    "@editorjs/quote": "^2.2.0",
+    "@editorjs/simple-image": "^1.3.1",
+    "@editorjs/table": "^1.2.0",
+    "@editorjs/warning": "^1.1.0",
+    "codex.editor.personality": "^1.0.2",
     "axios": "^0.18.0",
     "polished": "^3.2.0",
     "react": "^16.8.6",
@@ -35,7 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@editorjs/editorjs": "^2.13.0",
+    "@editorjs/editorjs": "^2.14.0",
     "@editorjs/paragraph": "^2.5.0"
   }
 }
