--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@editorjs/simple-image": "^1.3.1",
     "@editorjs/table": "^1.2.0",
     "@editorjs/warning": "^1.1.0",
+    "axios": "^0.18.1",
     "codex.editor.personality": "^1.0.2",
-    "axios": "^0.18.0",
     "polished": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0",
+    "react-scripts": "3.2.0",
     "styled-components": "^4.2.0",
     "styled-reset": "^2.0.9",
     "styled-theming": "^2.2.0"
@@ -30,6 +30,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "./node_modules/.bin/eslint ./src/**/**/*.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -50,6 +51,12 @@
   },
   "devDependencies": {
     "@editorjs/editorjs": "^2.14.0",
-    "@editorjs/paragraph": "^2.5.0"
+    "@editorjs/paragraph": "^2.5.0",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
