--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.18.1",
     "codex.editor.personality": "^1.0.2",
     "polished": "^3.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
