--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "./node_modules/.bin/eslint ./src/**/**/*.js",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "lint:css": "stylelint src",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
